[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures = "0.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
